--- a/css/style2.css
+++ b/css/style2.css
@@ -131,14 +131,15 @@ body{ background:#040d26 url(../images/body_bg.jpg) 0 0 no-repeat; -webkit-backg
 }
 
 .chat_block{ background: url(../images/line1.png) center 0 no-repeat; -webkit-background-size: 314px; background-size: 314px;}
-.chat_block2 >div img{ width: 30px; height: 30px; border-radius: 50%;}
+.chat_block >div span{display: inline-block; vertical-align: middle; width: 30px; height: 30px; border-radius: 50%; border: 2px #f00 solid; margin-right: 5px;}
+.chat_block >div img{ width: 30px; height: 30px; border-radius: 50%; vertical-align: top; }
 /*barrage style*/
-.line1{ font-size: 18px; color: #ffcf7d; padding: 0px 0 11px 118px; background: url(../images/ico_dao2.png) 0 2px no-repeat; -webkit-background-size: auto 100%; background-size: auto 100%; }
-.line2{ font-size: 26px; color: #aee4ff; padding: 0px 0 8px 124px; background: url(../images/ico_dao1.png) 0 5px no-repeat; -webkit-background-size: auto 100%; background-size: auto 100%; }
-.line3{ font-size: 15px; color: #ff6129; padding: 0px 0 6px 87px; background: url(../images/ico_dao3.png) 0 0 no-repeat; -webkit-background-size: auto 100%; background-size: auto 100%; }
-.line4{ font-size: 24px; color: #feffa7; padding: 0px 0 7px 130px; background: url(../images/ico_dao4.png) 0 10px no-repeat; -webkit-background-size: auto 100%; background-size: auto 100%; }
-.line5{ font-size: 18px; color: #77c3ff; padding: 0px 0 8px 140px; background: url(../images/ico_dao5.png) 0 5px no-repeat; -webkit-background-size: auto 100%; background-size: auto 100%; }
-.line_me{ font-size: 24px; color: #83d9ff;  padding: 15px 0 29px 146px; background: url(../images/ico_dao_me.png) 0 5px no-repeat; -webkit-background-size: auto 100%; background-size: auto 100%; text-shadow: 1px 1px 0 rgba(0,0,0,.5);}
+.line1{ font-size: 18px; color: #ffcf7d; }
+.line2{ font-size: 26px; color: #aee4ff; }
+.line3{ font-size: 15px; color: #ff6129; }
+.line4{ font-size: 24px; color: #feffa7; }
+.line5{ font-size: 18px; color: #77c3ff; }
+.line_me{ font-size: 24px; color: #83d9ff; }
 
 
 .input_bar{ width: 100%; height: 45px; overflow: hidden; display: table; background: url(../images/line2.png) center 0 no-repeat; -webkit-background-size: 317px; background-size: 317px;}
